@@ -1,3 +1,9 @@
+2004-03-02  Yusei Tahara  <tahara@timedia.co.jp>
+
+	* src/kahua/sandbox.scm (make-sandbox-module):
+	fixed a module dependency. now use kahua.plugin.
+	disabled exit, sys-exit, sys-abort bindings in sandbox module. 
+
 2004-03-01  Yusei Tahara  <tahara@timedia.co.jp>
 
 	* src/kahua/pdf/interp.scm (html-environment): added kahua specific
